se modifico index.html

--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
 <body>
     <header>
         <h1>Mi Portafolio</h1>
-        <h2>Tu Nombre</h2>
-        <p>Desarrollador Web</p>
+        <h2>Javier Alejandro Viasus Florez</h2>
+        <p>Desarrollador Web, Bacteriologo y Profesor de taekwondo</p>
     </header>
 
     <section id="proyectos">
         <article>
-            <h3>Proyecto 1</h3>
-            <p>Descripción del proyecto 1.</p>
+            <h3>Proyecto 1: ALL WE NEED IS LOVE</h3>
+            <p>¡Somos tu pagina amiga! ALL WE NEED IS LOVE existe y funciona para darte apoyo en tu salud mental. Confia en nosotros, podemos ayudarte a mejorar tu estado animico. Te invitamos a conocer todo lo que nuestra pagina te ofrece y lo que tenemos para aportarte si tu nos permites conocerte un poco</p>
             <ul>
-                <li>Tecnología 1</li>
-                <li>Tecnología 2</li>
-                <li>Tecnología 3</li>
+                <li><b>¿Quienes somos?</b>Somos una red de apoyo y asesoria para brindar un apoyo a personas que tienen problemas psicoemocionales</li>
+                <li><b>¿Cual es nuestra metodologia?</b>Hablemos, expresanos lo que piensas te escucharemos</li>
+                <li><b>¡Queremos saber de ti!</b> Cuentanos quien eres, que sientes, que piensas, que te gusta, que te disgusta; eres muy importante para nosotros queremos saber de ti</li>
+                <li><b>Nuestro contenido que puedes explorar:</b>
+                    <ol>
+                        <li>Libros</li>
+                        <li>Peliculas</li>
+                        <li>podcasts</li>
+                        <li>frases, poemas</li>
+                        <li>expresiones artisticas</li>
+                        <li>¿quieres hablar con alguien?</li>
+                    </ol>
+                </li>
             </ul>
-            <img src="proyecto1.jpg" alt="Proyecto 1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO1" frameborder="0"
-                allowfullscreen></iframe>
+            <img src="https://img.freepik.com/vector-premium/soporte-psicologico-linea-paciente-femenino-personaje-dibujos-animados-computadora-portatil_202271-1250.jpg" width="20%">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/W1Y-yenkyNI?si=nezGWZfgkI7HaP_2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </article>
 
         <article>
